attached_assets/Pasted-Cloning-from-https-github-com-Mayanshh-SafeRental-Checking-out-commit-214202e0b2bd17a0d677f92c-1757773359950_1757773359950.txt
Cloning from https://github.com/Mayanshh/SafeRental
==> Checking out commit 214202e0b2bd17a0d677f92c970b2407f222057b in branch main
==> Using Node.js version 22.16.0 (default)
==> Docs on specifying a Node.js version: https://render.com/docs/node-version
==> Running build command 'npm install && npm run build'...
added 675 packages, and audited 676 packages in 13s
72 packages are looking for funding
  run `npm fund` for details
6 vulnerabilities (3 low, 3 moderate)
To address all issues, run:
  npm audit fix
Run `npm audit` for details.
> rest-express@1.0.0 build
> vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist
vite v5.4.19 building for production...
transforming...
node:internal/process/promises:394
    triggerUncaughtException(err, true /* fromPromise */);
    ^
[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: /opt/render/project/src/SafeRentalVerify/client): [Error] Loading PostCSS Plugin failed: Cannot find module 'autoprefixer'
Require stack:
- /opt/render/project/src/SafeRentalVerify/postcss.config.js
(@/opt/render/project/src/SafeRentalVerify/postcss.config.js)
Error: Loading PostCSS Plugin failed: Cannot find module 'autoprefixer'
Require stack:
- /opt/render/project/src/SafeRentalVerify/postcss.config.js
(@/opt/render/project/src/SafeRentalVerify/postcss.config.js)
    at load (file:///opt/render/project/src/SafeRentalVerify/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33632:11)
    at file:///opt/render/project/src/SafeRentalVerify/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///opt/render/project/src/SafeRentalVerify/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33656:8)
    at processResult (file:///opt/render/project/src/SafeRentalVerify/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33726:14)
    at file:///opt/render/project/src/SafeRentalVerify/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33856:14]
Node.js v22.16.0
==> Build failed 😞